@@ -134,7 +134,7 @@ public abstract class AbstractQuotaAwareFsTests extends PackagingTestCase {
         int available = 10 * 1024 * 1024;
 
         final Path quotaPath = getTempDir().resolve("quota.properties");
-        Files.writeString(quotaPath, String.format(Locale.ROOT, "total=%d\nremaining=%d\n", total, available));
+        Files.write(quotaPath, String.format(Locale.ROOT, "total=%d\nremaining=%d\n", total, available).getBytes());
 
         sh.getEnv().put("ES_JAVA_OPTS", "-Des.fs.quota.file=" + quotaPath.toUri());
 
@@ -151,7 +151,7 @@ public abstract class AbstractQuotaAwareFsTests extends PackagingTestCase {
 
             // Check that ES is polling the properties file for changes by modifying the properties file
             // and waiting for ES to pick up the changes.
-            Files.writeString(quotaPath, String.format(Locale.ROOT, "total=%d\nremaining=%d\n", updatedTotal, updatedAvailable));
+            Files.write(quotaPath, String.format(Locale.ROOT, "total=%d\nremaining=%d\n", updatedTotal, updatedAvailable).getBytes());
 
             // The check interval is 1000ms, but give ourselves some leeway.
             Thread.sleep(2000);
